
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "btech_rust_microservice_cache"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dashmap     = "6.1.0"
fnv         = "1.0.7"
napi        = "3.0.0"
napi-derive = "3.0.0"
parking_lot = "0.12.4"
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.142"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
